AC_INIT(configure.in)
CONFIG_RULES
AC_PROG_INSTALL
AC_CHECK_HEADERS(unistd.h stdlib.h string.h)
AC_C_CONST
dnl
dnl Kludge for simple server --- FIXME is this the best way to do this?
dnl
if test "$ac_cv_lib_socket" = "yes" -a "$ac_cv_lib_nsl" = "yes"; then
	AC_DEFINE(BROKEN_STREAMS_SOCKETS)
fi
dnl
dnl
KRB5_GETSOCKNAME_ARGS
KRB5_GETPEERNAME_ARGS
KRB5_BUILD_PROGRAM
AC_CONFIG_SUBDIRS(bsd gssftp telnet)
V5_AC_OUTPUT_MAKEFILE(. sample sample/sclient sample/sserver simple simple/client simple/server gss-sample user_user)
