AC_INIT(configure.in)
CONFIG_RULES
AC_PROG_INSTALL
KRB5_BUILD_PROGRAM
AC_HEADER_STDARG
AC_CHECK_FUNCS(getusershell lstat )
AC_CHECK_HEADERS(unistd.h pwd.h)
K5_GEN_MAKEFILE(.)
K5_GEN_MAKEFILE(klist)
K5_GEN_MAKEFILE(kinit)
K5_GEN_MAKEFILE(kdestroy)
K5_GEN_MAKEFILE(kpasswd)
K5_GEN_MAKEFILE(ksu)
K5_OUTPUT_FILES
dnl AC_OUTPUT to keep autoreconf happy
