AC_INIT(configure.in)
CONFIG_RULES
AC_PROG_INSTALL
KRB5_BUILD_PROGRAM
AC_HEADER_STDARG
AC_CHECK_FUNCS(getusershell lstat setenv inet_ntop getipnodebyaddr)
if test $ac_cv_func_setenv = no ; then
  SETENVOBJ=setenv.o
else
  SETENVOBJ=
fi
AC_SUBST(SETENVOBJ)
AC_CHECK_HEADERS(unistd.h pwd.h arpa/inet.h)
case $krb5_cv_host in
alpha-dec-osf*)
	AC_CHECK_LIB(security,setluid,
		AC_DEFINE(HAVE_SETLUID)
		KSU_LIBS="$KSU_LIBS -lsecurity"
	)
	;;
esac
AC_SUBST(KSU_LIBS)
K5_GEN_MAKEFILE(.)
K5_GEN_MAKEFILE(klist)
K5_GEN_MAKEFILE(kinit)
K5_GEN_MAKEFILE(kvno)
K5_GEN_MAKEFILE(kdestroy)
K5_GEN_MAKEFILE(kpasswd)
K5_GEN_MAKEFILE(ksu)
K5_AC_OUTPUT
