AC_INIT(configure.in)
CONFIG_RULES
AC_PROG_INSTALL
KRB5_BUILD_PROGRAM
AC_HEADER_STDARG
AC_CHECK_FUNCS(getusershell lstat setenv unsetenv getenv inet_ntop)
if test $ac_cv_func_setenv = no || test $ac_cv_func_unsetenv = no \
  || test $ac_cv_func_getenv = no; then
  SETENVOBJ=setenv.o
else
  SETENVOBJ=
fi
AC_SUBST(SETENVOBJ)
AC_CHECK_HEADERS(unistd.h pwd.h arpa/inet.h)
case $krb5_cv_host in
alpha*-dec-osf*)
	AC_CHECK_LIB(security,setluid,
		AC_DEFINE(HAVE_SETLUID)
		KSU_LIBS="$KSU_LIBS -lsecurity"
	)
	;;
esac
AC_SUBST(KSU_LIBS)
V5_AC_OUTPUT_MAKEFILE(. klist kinit kvno kdestroy kpasswd ksu)
